--- a/problem-sets/ps4/Uebungsblatt_4.Rmd
+++ b/problem-sets/ps4/Uebungsblatt_4.Rmd
@@ -1,7 +1,7 @@
 
 ```{r 'check_ps', include=FALSE}
 
-user.name = 'ENTER A USER NAME HERE'
+user.name = 'Justin Maidhof'
 ```
 
 # RTutor Uebungsblatt 4 - Projektkurs
@@ -46,10 +46,10 @@ library(stargazer)
 a) Im ersten Schritt laden wir die zur Verfuegung stehenden Daten. Laden Sie die unter Daten bereitgestellten `EU_Makro.csv` Daten in R.
 
 ```{r "1_a"}
-____ <- read_csv("____")
+#____ <- read_csv("____")
 
 # enter your code here ...
-
+eu_makro <- read_csv("data/EU_Makro.csv")
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -75,13 +75,14 @@ Auf den ersten Blick ist zu erkennen, das ein positiver Zusammenhang zwischen de
 b) Eine beliebte Methode einen Zusammenhang in einer einzelnen Zahl zusammenzufassen ist eine einfache lineare Regression mittels der Methode der kleinsten Quadrate (engl. Ordinary Least Squares OLS). Regressieren Sie in R `unempl` auf `debt_share_country_pro`. Speichern Sie das Ergebnis in der Variablen `reg1` und zeigen Sie dann eine Zusammenfassung von `reg1`. Bitte kommentieren Sie hierfuer den Code aus und ergaenzen Sie diesen: 
 
 ```{r "1_b"}
-reg1 <- lm(___~debt_share_country_pro, data=___)
-summary(___)
+#reg1 <- lm(___~debt_share_country_pro, data=___)
+#summary(___)
 
 # enter your code here ...
-
+reg1 <- lm(unempl ~debt_share_country_pro, data = eu_makro)
 
 # enter your code here ...
+summary(reg1)
 
 ```
 
@@ -105,27 +106,28 @@ Geben Sie hier Ihrer Antwort gerundet auf drei Nachkommastellen ein. Achten Sie 
 ```{r "1_c",optional=TRUE}
 
 # enter your code here ...
-
+6.895
 ```
 
 d) Manchmal moechten wir mit den geschaetzten Koeffizienten direkt weiterrechnen. Hierfuer ist die Funktion `coef` nuetzlich. Wenden Sie in einem ersten Schritt die Funktion `coef` auf `reg1` an. Anschliessend speichern Sie bitte den ersten Koeffizienten in der Variable `b0` und den zweiten in der Variable `b1`.
 ```{r "1_d"}
 
 # enter your code here ...
-
+coef(reg1)
 
 # enter your code here ...
-
+b0 <- coef(reg1)[1]
+b1 <- coef(reg1)[2]
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
 f) Fuegen Sie der Grafik `g1` in "blue" eine Linie mit der in `reg1` berechneten Regressionsgerade hinzu. Speichern Sie diese Grafik als `g2` und lassen Sie sich diese anschliessend anzeigen. Bitte fuellen Sie hierzu die Luecken aus:
 
 ```{r "1_f"}
-g2 <- g1 + geom_abline(intercept=___,slope=___,colour="___")
+#g2 <- g1 + geom_abline(intercept=___,slope=___,colour="___")
 
 # enter your code here ...
-
+g2 <- g1 + geom_abline(intercept = b0, slope = b1, colour = "blue")
 g2
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -135,7 +137,7 @@ g) In einer einfachen linearen Regression von `y` auf `x`, hat der geschaetzte K
 ```{r "1_g",optional=TRUE}
 
 # enter your code here ...
-
+cor(x = eu_makro$unempl, y = eu_makro$debt_share_country_pro, use = "pairwise.complete.obs")
 ```
 Das Vorzeichen ist gleich wie von unserem Schaetzer von beta1 in der linearen Regression, aber die Korrelation hat keine intuitive quantitative Interpretation.
 
@@ -172,7 +174,7 @@ Geben Sie die richtige Loesung 1 oder 2 an.
 ```{r "2_a_2"}
 
 # enter your code here ...
-
+2
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -180,7 +182,7 @@ Regressieren Sie nun `y` auf `x` mittels `lm`. Es ist nicht notwendig das Ergebn
 ```{r "2_a_3",optional=TRUE}
 
 # enter your code here ...
-
+lm(y ~ x)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -214,16 +216,16 @@ Tippen Sie die korrekte Antwort 1,2 oder 3 ein:
 ```{r "2_b_2"}
 
 # enter your code here ...
-
+2
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
 c) Nutzen Sie die Funktion `replicate`, um `simulate.and.estimate` gleich 5000 mal hintereinander aufzurufen. Speichern Sie die Ergebnisse in einem Vektor `sim.beta1` ab.
 ```{r "2_c"}
-____ <- ____(____,simulate.and.estimate())
+#____ <- ____(____,simulate.and.estimate())
 
 # enter your code here ...
-
+sim.beta1 <- replicate(5000, simulate.and.estimate())
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -231,7 +233,7 @@ Zeigen Sie ein Histogramm von sim.beta1 mit dem Befehl `hist`.
 ```{r "2_c_2",optional=TRUE}
 
 # enter your code here ...
-
+hist(sim.beta1)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -244,7 +246,7 @@ d) Berechnen Sie nun die Standardabweichung der simulierten Schaetzer `sim.beta1
 ```{r "2_d",optional=TRUE}
 
 # enter your code here ...
-
+sd(sim.beta1)
 ```
 
 Diese Standardabweichung misst wie stark unser Schaetzer aufgrund der Zufallseinfluesse in der Stoergroesse vom echten Wert beta1=2 im Schnitt abweicht. Diese Standardabweichung eines Schaetzers heißt `Standardfehler`.
@@ -255,7 +257,8 @@ e) Auch wenn Sie nur eine Stichprobe haben und nicht tausende Simulationen durch
 reg1 <-  lm(y~x)
 
 # enter your code here ...
-
+reg2<- lm(y~x)
+summary(reg2)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -279,10 +282,10 @@ Genauere Konfidenzintervalle können Sie mit dem Befehl `confint` berechnen. Wen
 ```{r "2_f",optional=TRUE}
 
 # enter your code here ...
-
+confint(reg1, level = 0.95)
 
 # enter your code here ...
-
+confint(reg1, level = 0.99)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -315,7 +318,7 @@ Zunaechst moechten wir nur die Daten fuer 3 Laender nutzen: Deutschland, Frankre
 ```{r "3_a_3"}
 
 # enter your code here ...
-
+dat <- filter(eu_makro, country %in% c("Germany", "France", "Netherlands"))
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -323,10 +326,10 @@ Regressieren Sie nun die Arbeitslosequote `unempl` auf das BIP Wachstum im Daten
 ```{r "3_a_4"}
 
 # enter your code here ...
-
+reg1 <- lm(unempl ~ gdp_growth, data = dat)
 
 # enter your code here ...
-
+summary(reg1)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -348,7 +351,7 @@ Tippen Sie die korrekte Antwort 1,2 oder 3 ein:
 ```{r "3_a_5"}
 
 # enter your code here ...
-
+1
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -370,7 +373,7 @@ Tippen Sie die korrekte Antwort 1,2 oder 3 ein:
 ```{r "3_b"}
 
 # enter your code here ...
-
+3
 ```
 
 Welche Aussagen sind richtig gemaess unserer Schaetzung?
@@ -383,7 +386,7 @@ Geben Sie als Antwort einen numerischen Vektor mit allen richten Antworten ein, 
 ```{r "3_b_2"}
 
 # enter your code here ...
-
+c(3)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -427,7 +430,7 @@ Geben Sie hier die Ziffer Ihrer Antwort ein und fuehren Sie die Codezeile aus:
 ```{r "3_c_2"}
 
 # enter your code here ...
-
+3
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -450,7 +453,7 @@ Geben Sie hier die Ziffer Ihrer Antwort ein und fuehren Sie die Codezeile aus:
 ```{r "3_d"}
 
 # enter your code here ...
-
+4
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -473,7 +476,8 @@ b) Regressieren Sie das BIP pro Kopf `bip` auf den Kapitalstock pro Kopf `k`. Sp
 ```{r "4_b"}
 
 # enter your code here ...
-
+reg1 <- lm(bip ~ k , data= pwt)
+summary(reg1)
 ```
 Was ist eine richtige Interpretation des Koeffizienten von `k`?
 
@@ -487,7 +491,7 @@ Tippen Sie 1,2 oder 3
 ```{r "4_b_2"}
 
 # enter your code here ...
-
+2
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -506,7 +510,9 @@ d) Generieren Sie fuer `pwt` mit `mutate` zwei neue Spalten `log_bip` und `log_k
 ```{r "4_d"}
 
 # enter your code here ...
-
+pwt <- pwt %>%
+  mutate(log_bip = log(bip))%>%
+  mutate(log_k = log(k))
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -522,7 +528,8 @@ e) Regressieren Sie nun `log_bip` auf `log_k`. Speichern Sie das Ergebnis in `re
 ```{r "4_e"}
 
 # enter your code here ...
-
+reg2 <- lm(log_bip ~ log_k, data = pwt)
+summary(reg2)
 ```
 
 Was ist nun die korrekte Interpretation des Koeffizienten vor log_k?
@@ -537,7 +544,7 @@ Schreiben Sie 1,2, oder 3.
 ```{r "4_e_2"}
 
 # enter your code here ...
-
+3
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
