--- a/problem-sets/ps5/Uebungsblatt_5.Rmd
+++ b/problem-sets/ps5/Uebungsblatt_5.Rmd
@@ -1,7 +1,7 @@
 
 ```{r 'check_ps', include=FALSE}
 
-user.name = 'ENTER A USER NAME HERE'
+user.name = 'Justin Maidhof'
 ```
 
 # RTutor Uebungsblatt 5 - Projektkurs
@@ -54,10 +54,10 @@ b) Wir moechten nun durch eine lineare Regression den Zusammenhang zwischen Stun
 ```{r "1_b",optional=TRUE}
 
 # enter your code here ...
-
+reg1 <- lm(wage ~educ, data = wage1)
 
 # enter your code here ...
-
+summary(reg1)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -69,7 +69,7 @@ Schreiben Sie "ja" oder "nein"
 ```{r "1_c",optional=TRUE}
 
 # enter your code here ...
-
+"nein"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -88,13 +88,16 @@ e) Ein Hauptgrund fuer Verzerrungen sind das wichtige Einflussgroessen, die sowo
 Vervollstaendigen Sie den Code and der Stelle ___, um die durchschnittlichen Ausbildungsjahre von Maennern und Frauen zu vergleichen.
 
 ```{r "1_e",optional=TRUE}
-wage1 %>%
- mutate(gender = ifelse(female==1,"___","___")) %>%
- group_by(gender) %>%
- summarize(mean(___))
+#wage1 %>%
+ #mutate(gender = ifelse(female==1,"___","___")) %>%
+ #group_by(gender) %>%
+ #summarize(mean(___))
 
 # enter your code here ...
-
+wage1 %>%
+  mutate(gender = ifelse(female==1, "female", "male"))%>%
+  group_by(gender)%>%
+  summarize(mean(educ))
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -127,7 +130,7 @@ Tippen Sie 1 oder 2 ein:
 ```{r "1_e_3",optional=TRUE}
 
 # enter your code here ...
-
+1
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -165,7 +168,7 @@ Nehmen Sie an, wir regressieren y auf x ohne fuer w zu kontrollieren, d.h `lm(y~
 ```{r "1_g_2",optional=TRUE}
 
 # enter your code here ...
-
+"unverzerrt"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -224,7 +227,7 @@ Frage: Liegt in der zweiten Regression der wahre kausale Effekt `beta1=2` im 95%
 ```{r "1_g_5"}
 
 # enter your code here ...
-
+"nein"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -236,7 +239,7 @@ Berechnen Sie auch das 99% Konfidenzintervall:
 ```{r "1_g_7"}
 
 # enter your code here ...
-
+confint(lm(y~x), level=0.99)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -289,7 +292,7 @@ In welche Richtung veraendert sich vermutlich der geschaetzte Koeffizient von `e
 ```{r "1_h_5",optional=TRUE}
 
 # enter your code here ...
-
+"groesser"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -314,7 +317,7 @@ Geben Sie 0.54 oder 0.64 an.
 ```{r "1_h_7"}
 
 # enter your code here ...
-
+0.54
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -331,7 +334,7 @@ reg1 <- lm(wage ~ educ, data = wage1)
 reg2 <- lm(wage ~ educ + female + nonwhite, data=wage1)
 
 # enter your code here ...
-
+reg3 <- lm(wage~educ +female + nonwhite + exper, data = wage1)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -365,7 +368,8 @@ Als kleine Voruebung, speichern Sie in der Variablen `n_train` die Zahl der Arbe
 ```{r "2_a_2"}
 
 # enter your code here ...
-
+n_train =sum(jtrain3$train)
+n_train
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -380,7 +384,7 @@ Geben Sie hier die Ziffer Ihrer Antwort ein und fuehren Sie die Codezeile aus:
 ```{r "2_a_3"}
 
 # enter your code here ...
-
+2
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -392,10 +396,10 @@ b) Fuehren Sie eine lineare Regression (mittels OLS) mit x=`train` und y=`unem78
 ```{r "2_b"}
 
 # enter your code here ...
-
+reg1 <- lm(unem78~train, data = jtrain3)
 
 # enter your code here ...
-
+summary(reg1)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -405,12 +409,14 @@ Bedeutet dies, dass mehr Weiterbildung zu mehr Arbeitslosigkeit fuehrt?
 
 c) Ergaenzen Sie folgenden Code um die durchschnittliche Teilnahme an Weiterbildungsprogrammen 1977 und die Arbeitslosenquote 1978 zwischen den Personen zu vergleichen, die 1975 arbeitslos/nicht arbeitslos waren.
 ```{r "2_c"}
-___ %>% 
- group_by(___) %>%
- summarize(mean(train), mean(___))
+#___ %>% 
+# group_by(___) %>%
+# summarize(mean(train), mean(___))
 
 # enter your code here ...
-
+jtrain3 %>%
+  group_by(unem75) %>%
+  summarize(mean(train), mean(unem78))
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -445,7 +451,7 @@ Schreiben Sie "kleiner" oder "groesser".
 ```{r "2_d_2"}
 
 # enter your code here ...
-
+"kleiner"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -454,7 +460,8 @@ Regressieren Sie nun `unem78` auf `train` und `unem75`. Speichern Sie das Ergebn
 ```{r "2_d_3"}
 
 # enter your code here ...
-
+reg2 <- lm(unem78 ~ train+unem75, data = jtrain3)
+stargazer(reg1, reg2)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -468,7 +475,8 @@ Erstellen Sie zwei Datensaetze aus `jtrain3`:
 ```{r "2_e"}
 
 # enter your code here ...
-
+jtrain3_la = filter(jtrain3, unem75 == 1)
+jtrain3_ka = filter(jtrain3, unem75 == 0)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -477,7 +485,8 @@ Lassen Sie nun die einfache Regression von `unem78` auf `train` (ohne `unem75`) 
 ```{r "2_e_2"}
 
 # enter your code here ...
-
+reg_la = lm(unem78~train, data = jtrain3_la)
+reg_ka = lm(unem78~train, data = jtrain3_ka)
 stargazer(reg1, reg2, reg_la, reg_ka,type="text",keep.stat=c("n"), column.labels = c("alle","alle", "Lang Alo","Kurz Alo") )
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -530,7 +539,7 @@ Meinen Sie dieses Design loest die meisten relevanten Selektionsproblem und erla
 ```{r "2_f_2"}
 
 # enter your code here ...
-
+"nein"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
